--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,11 +63,11 @@
      <Compile Include="Assets\Scripts\Managers\GridManager.cs" />
      <Compile Include="Assets\Scripts\Managers\LivesManager.cs" />
      <Compile Include="Assets\Scripts\Managers\MonsterManager.cs" />
+     <Compile Include="Assets\Scripts\Managers\TimeManager.cs" />
      <Compile Include="Assets\Scripts\Managers\TowerManager.cs" />
      <Compile Include="Assets\Scripts\Other\MonoSingleton.cs" />
-     <Compile Include="Assets\Scripts\Simple Behaviors\FixedRotation.cs" />
-     <Compile Include="Assets\Scripts\Simple Behaviors\FollowObject.cs" />
-     <Compile Include="Assets\TimeManager.cs" />
+     <Compile Include="Assets\Scripts\Other\Tweens.cs" />
+     <Compile Include="Assets\Scripts\Simple Behaviors\Rotate.cs" />
      <None Include="Assets\Packages\Simple UI\Fonts\OFL.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Users/couvr/Desktop/Software/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
